WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91822
[Qt] Fix compilation after QtQuick API changes
https://bugs.webkit.org/show_bug.cgi?id=91822
Summary
[Qt] Fix compilation after QtQuick API changes
Simon Hausmann
Reported
2012-07-19 23:25:45 PDT
[Qt] Fix compilation after QtQuick API changes
Attachments
Patch
(6.95 KB, patch)
2012-07-19 23:29 PDT
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-07-19 23:28:48 PDT
The next Qt 5 update comes with source incompatible changes (wohooo), so it's going to require changes on this side. The change that I'm going to upload is a little bigger than necessary. Strictly speaking we're only affected by grabFrameBuffer -> grabWindow(), all the other methods have temporarily forwarding functions/typedefs to the old names. But those will be removed soon, so we might as well do all the fixing in one shot now :)
Simon Hausmann
Comment 2
2012-07-19 23:29:08 PDT
Created
attachment 153425
[details]
Patch
Early Warning System Bot
Comment 3
2012-07-19 23:36:59 PDT
Comment on
attachment 153425
[details]
Patch
Attachment 153425
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/13312145
Kenneth Rohde Christiansen
Comment 4
2012-07-19 23:43:51 PDT
Comment on
attachment 153425
[details]
Patch rs=me
Csaba Osztrogonác
Comment 5
2012-07-23 03:42:56 PDT
Thanks for this fix. I built the latest Qt5 (654fcc335c20431f60d3fde32e636aae38afe658), the WebKit build with it and with this patch works fine. I'll land this patch with the update. Shall I do the update today or should we wait until friday? (The latest update was a long time ago ... at 06th July)
Simon Hausmann
Comment 6
2012-07-23 03:50:58 PDT
(In reply to
comment #5
)
> Thanks for this fix. > > I built the latest Qt5 (654fcc335c20431f60d3fde32e636aae38afe658), > the WebKit build with it and with this patch works fine. > > I'll land this patch with the update. Shall I do the update today or should > we wait until friday? (The latest update was a long time ago ... at 06th July)
I'd say let's do it today, because it's been a while and following up quickly on the source incompatible changes makes it easier for the Qt project to follow.
Csaba Osztrogonác
Comment 7
2012-07-24 07:47:51 PDT
Comment on
attachment 153425
[details]
Patch Clearing flags on attachment: 153425 Committed
r123476
: <
http://trac.webkit.org/changeset/123476
>
Csaba Osztrogonác
Comment 8
2012-07-24 07:47:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug