[Qt] Fix compilation after QtQuick API changes https://bugs.webkit.org/show_bug.cgi?id=91822

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-07-24
Reviewed by Kenneth Rohde Christiansen.

QQuickCanvas is now QQuickWindow, QQuickItem::canvas() is window() and rootItem()
is contentItem(). Also QQuickWindow::grabFrameBuffer() is now grabWindow().

* UIProcess/API/qt/qquickwebpage.cpp:
* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::updateIcon):
* UIProcess/API/qt/tests/qquickwebview/tst_qquickwebview.cpp:
(tst_QQuickWebView::multipleWebViews):
(tst_QQuickWebView::basicRenderingSanity):
(tst_QQuickWebView::transparentWebViews):
* UIProcess/API/qt/tests/testwindow.h:
(TestWindow::TestWindow):
* UIProcess/qt/QtPageClient.cpp:
(WebKit::QtPageClient::isViewVisible):
* UIProcess/qt/QtWebPageEventHandler.cpp:
(WebKit::QtWebPageEventHandler::startDrag):

Canonical link: https://commits.webkit.org/109926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123476 268f45cc-cd09-0410-ab3c-d52691b4dbfc